--- a/chef_ai_lite/templates/index.html
+++ b/chef_ai_lite/templates/index.html
@@ -2,10 +2,10 @@
   <head>
     <Title>Chef.ai</Title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/styles.css">
   </head>
   <style>
     body {
+      margin-right: 16px;
       display: flex;
       flex-direction: row;
       align-items: flex-start;
@@ -35,6 +35,17 @@
       height: 375px;
       background-color: #666;
     }
+    #recipe-list {
+      list-style: none;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    #recipe-box {
+      border: 2px solid black;
+      margin: 16px;
+      padding: 16px;
+    }
   </style>
   <body>
     <div class="container">
@@ -53,10 +64,10 @@
     <canvas id="can" style="display: none;"></canvas>
 
     <div class="container">
-      <h2>Let's see what we have!</h2>
+      <h2>Let me do some smart stuff!</h2>
       <div id="comparison">
         <button onclick="handleInference('c')">Detect (CPU)</button>
-        <button onclick="handleInference('m')" id="last-compare">Detect (CPU)</button>
+        <button onclick="handleInference('m')" id="last-compare">Detect (MYRIAD)</button>
       </div>
       <h2>Predictions!</h2>
       <div id="predictions">
@@ -69,16 +80,31 @@
       <div id="comparison">
         <div>
           <h3>Input Photo</h3>
-          <img id="display" src="" alt="webcam" width="300"/>
+          <img id="display" src="" alt="Take or Upload a Photo!" width="300"/>
         </div>
         <div id="last-compare">
           <h3>Result Photo</h3>
-          <img id="result" src="" alt="webcam" width="300"/>
+          <img id="result" src="" alt="The result will be displayed here!" width="300"/>
         </div>
       </div>
     </div>
 
+    <div class="container" id="display-recipes" style="display: none;">
+      <h2>Let's see what we can make!</h2>
+      <button onclick="handleRecipes()" style="max-width: 200px">Get Recipes!</button>
+      <h3>Recipes</h3>
+      <div id="recipes">
+        <ul id="recipe-list"></ul>
+      </div>
+    </div>
+
     <script>
+      // CHANGE THESE VARIABLES
+      const configs = {
+        'APP_ID': 'PUT APP_ID HERE',
+        'APP_KEY': 'PUT APP_KEY HERE'
+      }
+
       document.getElementById("uploaded_file").onchange = (e) => {
         var reader = new FileReader()
         reader.onload = (e) => {
@@ -128,8 +154,67 @@
         fetch("/detect", ops).then((data) => {
           return data.json()
         }).then((res) => {
-          document.getElementById("predictions").innerHTML = res.info_state
+          const conversion_map = {
+            1: 'banana', 2: 'bellpepper', 3: 'tomato', 4: 'broccoli', 5: 'cheese',
+            6: 'beef', 7: 'steak', 8: 'olive oil', 9: 'corn', 10: 'eggs'
+          }
+          var labels = ""
+          res.info_state.split(',').forEach((val, index) => {
+            var label = conversion_map[val]
+            labels = index === 0 ? label : labels + "," + label
+          })
+
+          document.getElementById("predictions").innerHTML = labels
           document.getElementById("result").src = res.result
+          document.getElementById("display-recipes").style.display = 'flex'
+        })
+      }
+
+      // Handling Edamam API request
+      const handleRecipes = () => {
+        var ingredients = document.getElementById("predictions").innerHTML.split(",")
+        var q = ""
+        ingredients.forEach((val, index) => {
+          q = index === 0 ? val : q + "+" + val
+        })
+
+        if (ingredients.length === 0) {
+          console.log(ingredients)
+          console.log(q)
+          return
+        }
+
+        var API_URL = 'https://api.edamam.com/search?' + "q=" + q
+        API_URL = API_URL + "&app_id=" + configs['APP_ID']
+        API_URL = API_URL + "&app_key=" + configs["APP_KEY"]
+        fetch(API_URL).then((data) => {
+          return data.json()
+        }).then((res) => {
+          const {hits} = res
+          var recipes = hits.map((val, index) => {
+            const {recipe} = val
+            const {url, ingredientLines, calories, healthLabels, label, source, image} = recipe
+            var li = document.createElement('li')
+            li.setAttribute('id', 'recipe-box')
+            healthLabellist = ""
+            healthLabels.forEach((val, index) => {
+              healthLabellist = index === 0 ? val : healthLabellist + " " + val
+            })
+
+            inglist = "<ul>"
+            ingredientLines.forEach((val, index) => {inglist = inglist + `<li>${val}</li>`})
+            inglist = inglist + "</ul>"
+
+            li.innerHTML = "<div>"
+            li.innerHTML = li.innerHTML + `<h3>${label} by ${source}</h3>`
+            li.innerHTML = li.innerHTML + `<p><a href=${url}>Link to Recipe</a></p>`
+            li.innerHTML = li.innerHTML + `<img src=${image} alt="pic" />`
+            li.innerHTML = li.innerHTML + `<p>Calories: ${calories}</p>`
+            li.innerHTML = li.innerHTML + `<p>Health Labels: ${healthLabellist}</p>`
+            li.innerHTML = li.innerHTML + `<h3>Ingredients</h3>${inglist}`
+            li.innerHTML = li.innerHTML + "</div>"
+            document.getElementById("recipe-list").appendChild(li)
+          })
         })
       }
 
